<resources>
    <string name="app_name">Chess</string>
    <string name="signup">Sign up</string>
    <string name="login">Login</string>
    <string name="username">USERNAME</string>
    <string name="password">PASSWORD</string>
    <string name="email">EMAIL</string>
    <string name="language">Language</string>
    <string name="logout">Logout</string>
    <string name="change_password">Change password</string>
    <string name="playerName">Player Name</string>
    <string name="local_game">Local</string>
    <string name="online_game">Online</string>
    <string name="async_game">Async</string>
    <string name="friendly_game">Friendlies</string>
    <string name="home">Home</string>
    <string name="history">Historic</string>
    <string name="profile">Profil</string>
    <string name="ranking">Rankings</string>
    <string name="settings">Settings</string>
    <string name="edit_profile">Edit profil</string>
    <string name="french" translatable="false">Français</string>
    <string name="english" translatable="false">English</string>
    <string name="spanish" translatable="false">Español</string>
    <string name="loading">Loading...</string>
    <string name="friends">Friends</string>
    <string name="addfriends">Add friend</string>
    <string name="friendrequests">Friend Requests</string>
    <string name="accept">Accept</string>
    <string name="refuse">Refuse</string>
    <string name="pseudo">Username</string>
    <string name="send">Send</string>
    <string name="cancel">Cancel</string>
    <string name="lookforopponent">Looking for an opponent...</string>
    <string name="gametype">Match type</string>
    <string name="ranked">Ranked</string>
    <string name="unranked">Unranked</string>
    <string name="random">Random</string>
    <string name="oldpass">Old password</string>
    <string name="newpass">New password</string>
    <string name="updatedpass">Password updated</string>
    <string name="your_ranking">Your rank : #%1$d - %2$s - ELO : %3$d</string>
    <string name="match_found">Match found versus : #%1$s</string>
    <string name="searchMatch">Searching for matches</string>
    <string name="foundOpponent">Match found</string>
    <string name="victory">Win</string>
    <string name="lose">Lose</string>
    <string name="matchplayed">Matchs played : %1$d</string>
    <string name="winrate">"Winrate : %1$d%"</string>
</resources>