<menu xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home"
        android:title="@string/home"
        android:color="@android:color/white"
        />
    <item
        android:id="@+id/navigation_history"
        android:icon="@drawable/historic"
        android:title="@string/history"
        android:color="@android:color/white"
        />
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/profil"
        android:title="@string/profile"
        android:color="@android:color/white"
        />
    <item
        android:id="@+id/navigation_ranking"
        android:icon="@drawable/classement"
        android:title="@string/ranking" />
    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/logo"
        android:title="@string/settings" />
</menu>
