<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/logo"
    tools:context=".old.MainActivity">

    <!-- Layout spécial pour encadrer les EditText -->

    <!-- Bouton d'Inscription -->

    <!-- Lien vers la page de connexion -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/signupContainer"
        android:layout_width="391dp"
        android:layout_height="288dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="240dp"
        android:layout_marginEnd="32dp"
        android:background="@color/black_transparent"
        android:padding="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Champ Email -->
        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="350dp"
            android:layout_height="58dp"
            android:background="@drawable/edittext_background"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Champ Login -->

        <!-- Champ Password -->

        <EditText
            android:id="@+id/editTextLogin"
            android:layout_width="350dp"
            android:layout_height="58dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/edittext_background"
            android:hint="@string/username"
            android:inputType="text"
            android:padding="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editTextEmail" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/edittext_background"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editTextLogin" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/home_signup_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_degrade"
        android:text="@string/signup"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signupContainer"
        app:layout_constraintVertical_bias="0.254" />

    <TextView
        android:id="@+id/loginLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/login"
        android:textColor="@color/blue_link"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/home_signup_button" />

</androidx.constraintlayout.widget.ConstraintLayout>
