<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/logo">

    <!-- Layout spécial pour encadrer les EditText -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/loginContainer"
        android:layout_width="400dp"
        android:layout_height="200dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="375dp"
        android:layout_marginEnd="32dp"
        android:background="@color/black_transparent"
        android:padding="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Champ Login -->
        <EditText
            android:id="@+id/editTextLogin"
            android:layout_width="350dp"
            android:layout_height="58dp"
            android:background="@drawable/edittext_background"
            android:hint="@string/username"
            android:inputType="text"
            android:padding="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Champ Password -->
        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/edittext_background"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editTextLogin" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Bouton de Connexion -->

    <!-- Lien vers l'inscription -->
    <Button
        android:id="@+id/home_login_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_degrade"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginContainer"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/signUpLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/signup"
        android:textColor="@color/blue_link"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/home_login_button" />

</androidx.constraintlayout.widget.ConstraintLayout>
