<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green">

    <!-- Barre de navigation en bas -->
    <LinearLayout
        android:id="@+id/paremetresButtons"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">
        
        
        <TextView
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:text="@string/settings"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:gravity="center"/>


  

        <LinearLayout
            android:id="@+id/change_password_button"
            android:layout_width="match_parent"
            android:layout_height="135dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/button_background"
            android:gravity="center_vertical"
            android:padding="16dp">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/password" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/change_password"
                android:textColor="@android:color/white"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/language_button"

            android:layout_width="match_parent"
            android:layout_height="135dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/button_background"
            android:gravity="center_vertical"
            android:padding="16dp">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/language" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/language"
                android:textColor="@android:color/white"
                android:textSize="24sp" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/logout_button"
            android:layout_width="match_parent"
            android:layout_height="135dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/button_background"
            android:gravity="center_vertical"
            android:padding="16dp">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/logout" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/logout"
                android:textColor="@android:color/white"
                android:textSize="24sp" />
        </LinearLayout>




    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/nav_background"
        app:menu="@menu/bottom_nav_menu"
        app:labelVisibilityMode="labeled"
        app:itemIconTint="@null"
        app:itemTextColor="@color/nav_item_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
